<resources>
    <string name="app_name">Health Baby 12</string>
    <string name="Sign_in_button">Sign in with Google</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="welcome">Welcome</string>
    <string name="sign_out">Sign Out from Google</string>
    <string name="submit">submit</string>
    <string name="tb_logout">logout</string>
    <string name="tb_home">Home</string>
    <string name="tb_sync">Sync Data</string>
    <string name="tb_records">Records</string>
    <string name="home_menu">Home Menu</string>
    <string name="fragHeightWeight">Record Child\'s Height and Weight</string>
    <string name="fragActivity">Record An Activity</string>
    <string name="fragMilestone">Record a Milestone</string>
    <string name="fragReviewRecord">Review Records</string>
    <string name="fragLinks">Useful Links and Information</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_height_header">Enter Child\'s Weight and Height</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="enter_height">Enter Height</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="activity_header">Enter Your Child\'s Activity</string>
    <string name="bottle_button">Bottle Feed</string>
    <string name="breast_button">Breast Feed</string>
    <string name="Food">food</string>
    <string name="liquid">Liquid</string>
    <string name="diaper_button">diaper</string>
    <string name="sleep">Sleep</string>
    <string name="place_holder">Place Holder Data</string>
    <string name="enter_date">Enter Date:</string>
    <string name="volume_consumed">Volume Consumed</string>
    <string name="mm">mm</string>
    <string name="started_feed">Started Feed:</string>
    <string name="number_of_breast_fed_on">Number of Breast fed on</string>
    <string name="finished_feed">Finished Feed</string>
    <string name="weight_consumed">Weight of Food Consumed</string>
    <string name="grams">grams</string>
    <string name="enter_description_of_food_consumed">Enter Description of food consumed</string>
    <string name="enter_description_of_Liquid_consumed">Enter description of liquid consumed</string>
    <string name="wet">wet</string>
    <string name="dirty">Dirty</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="heavy">Heavy</string>
    <string name="time_slept">Time Slept</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="milestones">Milestones</string>
    <string name="enter_child_s_name">Enter Child\'s Name</string>
    <string name="select_child_s_date_of_birth">Select Child\'s Date of Birth:</string>
    <string name="jan_01_2020">JAN 01 2020</string>
    <string name="reset_data">Reset Data</string>
    <string name="clear_all_activity_data">Clear All Activity Data</string>
    <string name="date_of_feed">Date of Feed</string>
    <string name="volume_consumed_in_ml">volume consumed in ml</string>
    <string name="time_of_feed">Time of Feed</string>
    <string name="_08_00">08:00</string>
    <string name="total_feed_time_in_minutes">Total Feed time in minutes</string>
    <string name="date_diaper_changed">Date Diaper changed</string>
    <string name="time_diaper_changed">Time Diaper Changed</string>
    <string name="sleep_time_in_hours">Sleep time in hours</string>
    <string name="volume_of_liquid_consumed">Volume of liquid consumed</string>
    <string name="select_data_to_view">Select Data to View</string>
    <string name="weight_height">Weight Height</string>
    <string name="activities">Activities</string>
    <string name="send_activity_data_by_email">Send Activity data by Email</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="record">record</string>
</resources>