<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEntry">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_diaper_changed"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        />

    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/jan_01_2020"
        android:textSize="18sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/date"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/time_diaper_changed"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_below="@id/datePickerButton"
        android:layout_marginStart="12dp"
        />

    <Button
        android:id="@+id/timePickerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/_08_00"
        android:textSize="18sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        android:layout_marginTop="10dp"
        android:layout_below="@id/datePickerButton"
        android:layout_toEndOf="@id/time"/>

    <RadioGroup
        android:id="@+id/radio_group_diaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/time"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">
        <RadioButton
            android:id="@+id/radio_wet"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/wet"/>
        <RadioButton
            android:id="@+id/radio_dirt"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/dirty"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/radio_group_diaper"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">
        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="100dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/light"/>
        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="100dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/medium"/>
        <RadioButton
            android:id="@+id/radio_heavy"
            android:layout_width="100dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/heavy"/>
    </RadioGroup>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_below="@id/radio_group_full"
        android:text="@string/confirm"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_centerHorizontal="true"
        />



</RelativeLayout>