<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEntry">

    <TextView
        android:id="@+id/activityHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_header"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bottleButton"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_below="@id/activityHeader"
        android:text="@string/bottle_button"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>
    <Button
        android:id="@+id/breastButton"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_below="@id/activityHeader"
        android:layout_centerHorizontal="true"
        android:text="@string/breast_button"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>
    <Button
        android:id="@+id/foodButton"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_below="@id/activityHeader"
        android:layout_alignParentEnd="true"
        android:text="@string/Food"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

    <Button
        android:id="@+id/liquidButton"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_below="@id/bottleButton"
        android:text="@string/liquid"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>
    <Button
        android:id="@+id/diaperButton"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_below="@id/breastButton"
        android:layout_centerHorizontal="true"
        android:text="@string/diaper_button"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>
    <Button
        android:id="@+id/sleepButton"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_below="@id/foodButton"
        android:layout_alignParentEnd="true"
        android:text="@string/sleep"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>


    <FrameLayout
        android:id="@+id/activityFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liquidButton"/>

    <ScrollView
        android:id="@+id/activityScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_below="@id/activityFrame">
        <TextView
            android:id="@+id/activityData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_holder"
            android:textAlignment="center"/>
    </ScrollView>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/activityScroll"
        android:layout_alignParentEnd="true"
        android:text="@string/clear_all_activity_data"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

</RelativeLayout>