<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEntry">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_feed"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        />

    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/jan_01_2020"
        android:textSize="18sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/date"/>

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_of_feed"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_below="@id/datePickerButton"
        android:layout_marginStart="12dp"
        />

    <Button
        android:id="@+id/startTimePickerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/_08_00"
        android:textSize="18sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        android:layout_marginTop="10dp"
        android:layout_below="@id/datePickerButton"
        android:layout_toEndOf="@id/startTime"/>

    <TextView
        android:id="@+id/endTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_feed_time_in_minutes"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:layout_marginStart="12dp"
        android:layout_below="@id/startTime"
        />

    <EditText
        android:id="@+id/endTime"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/startTimePickerButton"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:layout_toEndOf="@id/endTimeLabel"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:inputType="number"/>


    <TextView
        android:id="@+id/breastLabel"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:text="@string/number_of_breast_fed_on"
        android:layout_below="@id/endTime"/>

    <EditText
        android:id="@+id/breastInput"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_below="@id/endTime"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_toEndOf="@id/breastLabel"
        android:inputType="number"
        android:textSize="12sp" />
    <Button
        android:id="@+id/confirmButton"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_below="@id/breastInput"
        android:text="@string/confirm"
        android:textSize="14sp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>